--- a/w_challangedanboshqa/index.html
+++ b/w_challangedanboshqa/index.html
@@ -9,6 +9,11 @@
 <body>
     
     <div id="root"></div>
+   <form action="" onsubmit="">
+    <input type="text" id="input" placeholder="Enter university name" required />
+    <input type="button" value="submit">
+   </form>
+
     <script src="algaritm.js"></script>
 </body>
 </html>
